Resolved Collapse of buttons in mobile, added new command to package.json

--- a/src/css/components/_buttons.pcss
+++ b/src/css/components/_buttons.pcss
@@ -1,4 +1,5 @@
 .btn {
+    @apply flex;
     @apply bg-yellow-600 hover:bg-yellow-800 text-zinc-900 hover:text-white;
     @apply transition-colors ease-in-out duration-300; 
     @apply px-4 py-2 text-lg;
